projects/hello-world/environments/fast-dev/local/workload-cluster/fast-dev-workload-cluster-local-north-america/manifests/virtualservice.yml
apiVersion: networking.istio.io/v1 
kind: VirtualService
metadata:
  name: home
  namespace: hello-world
spec:
  hosts:
  - hello.tkellen-us.fast.dev.wescaleout.cloud
  gateways:
  - ingress/north-south
  http:
  - route:
    - destination:
        host: home.hello-world.svc.cluster.local
        port:
          number: 80
